# code-check-matic

./: .flake8  Makefile  pyproject.toml  requirements.txt
.github/workflows/: code_audit.yml
qa_system/: bot_service.py  self_heal.py
